--- a/public/style.css
+++ b/public/style.css
@@ -1,257 +1,185 @@
-* {
-  margin: 0;
-  padding: 0;
-  outline: 0;
-}
-
+/* app */
 body {
-  padding: 80px 100px;
-  font: 13px "Helvetica Neue", "Lucida Grande", "Arial";
-  background: #ECE9E9 -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fff), to(#ECE9E9));
-  background: #ECE9E9 -moz-linear-gradient(top, #fff, #ECE9E9);
-  background-repeat: no-repeat;
-  color: #555;
-  -webkit-font-smoothing: antialiased;
+  font-family: arial;
+  padding: 10px 50px 200px;
 }
-h1, h2, h3 {
-  font-size: 22px;
-  color: #343434;
-}
-h1 em, h2 em {
-  padding: 0 5px;
-  font-weight: normal;
-}
+
 h1 {
-  font-size: 60px;
-}
-h2 {
-  margin-top: 10px;
-}
-h3 {
-  margin: 5px 0 10px 0;
-  padding-bottom: 5px;
-  border-bottom: 1px solid #eee;
-  font-size: 18px;
-}
-ul li {
-  list-style: none;
-}
-ul li:hover {
-  cursor: pointer;
-  color: #2e2e2e;
-}
-ul li .path {
-  padding-left: 5px;
-  font-weight: bold;
-}
-ul li .line {
-  padding-right: 5px;
-  font-style: italic;
-}
-ul li:first-child .path {
-  padding-left: 0;
-}
-p {
-  line-height: 1.5;
-}
-a {
-  color: #555;
-  text-decoration: none;
-}
-a:hover {
-  color: #303030;
-}
-#stacktrace {
-  margin-top: 15px;
-}
-.directory h1 {
-  margin-bottom: 15px;
-  font-size: 18px;
-}
-ul#files {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-ul#files li {
-  float: left;
-  width: 30%;
-  line-height: 25px;
-  margin: 1px;
-}
-ul#files li a {
-  display: block;
-  height: 25px;
-  border: 1px solid transparent;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  overflow: hidden;
-  white-space: nowrap;
-}
-ul#files li a:focus,
-ul#files li a:hover {
-  background: rgba(255,255,255,0.65);
-  border: 1px solid #ececec;
-}
-ul#files li a.highlight {
-  -webkit-transition: background .4s ease-in-out;
-  background: #ffff4f;
-  border-color: #E9DC51;
-}
-#search {
-  display: block;
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  width: 90px;
-  -webkit-transition: width ease 0.2s, opacity ease 0.4s;
-  -moz-transition: width ease 0.2s, opacity ease 0.4s;
-  -webkit-border-radius: 32px;
-  -moz-border-radius: 32px;
-  -webkit-box-shadow: inset 0px 0px 3px rgba(0, 0, 0, 0.25), inset 0px 1px 3px rgba(0, 0, 0, 0.7), 0px 1px 0px rgba(255, 255, 255, 0.03);
-  -moz-box-shadow: inset 0px 0px 3px rgba(0, 0, 0, 0.25), inset 0px 1px 3px rgba(0, 0, 0, 0.7), 0px 1px 0px rgba(255, 255, 255, 0.03);
-  -webkit-font-smoothing: antialiased;
-  text-align: left;
-  font: 13px "Helvetica Neue", Arial, sans-serif;
-  padding: 4px 10px;
-  border: none;
-  background: transparent;
-  margin-bottom: 0;
-  outline: none;
-  opacity: 0.7;
-  color: #888;
-}
-#search:focus {
-  width: 120px;
-  opacity: 1.0; 
+  color: darkslategray;
 }
 
-/*views*/
-#files span {
-  display: inline-block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  text-indent: 10px;
-}
-#files .name {
-  background-repeat: no-repeat;
-}
-#files .icon .name {
-  text-indent: 28px;
+h1 em {
+  color: #666;
+  font-size: 16px;
 }
 
-/*tiles*/
-.view-tiles .name {
-  width: 100%;
-  background-position: 8px 5px;
+/* grid */
+.row, .row * {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
-.view-tiles .size,
-.view-tiles .date {
+
+.row:before,
+.row:after {
+  content: " ";
+  display: table;
+}
+
+.row:after {
+  clear: both;
+}
+
+.row {
+  background: white;
+  margin: 0 0 10px 0;
+  /* gutter */
+}
+
+.row:last-of-type {
+  margin: 0 0 0 0;
+}
+
+.h-100 {
+  height: 100px;
+}
+
+.h-150 {
+  height: 150px;
+}
+
+.h-200 {
+  height: 200px;
+}
+
+.h-300 {
+  height: 300px;
+}
+
+.w-100 {
+  width: 100px;
+}
+
+.w-150 {
+  width: 150px;
+}
+
+.w-200 {
+  width: 200px;
+}
+
+.w-300 {
+  width: 300px;
+}
+
+.w-600 {
+  width: 600px;
+}
+
+.w-800 {
+  width: 800px;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.hidden {
   display: none;
 }
 
-/*details*/
-ul#files.view-details li {
-  float: none;
-  display: block;
-  width: 90%;
-}
-ul#files.view-details li.header {
-  height: 25px;
-  background: #000;
-  color: #fff;
-  font-weight: bold;
-}
-.view-details .header {
-  border-radius: 5px;
-}
-.view-details .name {
-  width: 60%;
-  background-position: 8px 5px;
-}
-.view-details .size {
-  width: 10%;
-}
-.view-details .date {
-  width: 30%;
-}
-.view-details .size,
-.view-details .date {
-  text-align: right;
-  direction: rtl;
+[class*='col-'] {
+  float: left;
+  padding-right: 10px;
+  height: 100%;
+  /* gutter */
 }
 
-/*mobile*/
-@media (max-width: 768px) {
-  body {
-    font-size: 13px;
-    line-height: 16px;
-    padding: 0;
-  }
-  #search {
-    position: static;
+.row [class*='col-']:last-of-type {
+  padding-right: 0;
+}
+
+.col-1-3 {
+  width: 33.33%;
+}
+
+.col-2-3 {
+  width: 66.66%;
+}
+
+
+.col-1-2 {
+  width: 50%;
+}
+
+.col-1-4 {
+  width: 25%;
+}
+
+.col-3-4 {
+  width: 75%;
+}
+
+.col-1-8 {
+  width: 12.5%;
+}
+
+.col-3-8 {
+  width: 37.5%;
+}
+
+.col-5-8 {
+  width: 62.5%;
+}
+
+.col-7-8 {
+  width: 87.5%;
+}
+
+.module {
+  padding: 20px;
+  background: #eee;
+  height: 100%;
+}
+
+/* Opt-in outside padding */
+
+.row-pad {
+  padding: 20px 0 20px 20px;
+}
+
+.row-pad [class*='col-']:last-of-type {
+  padding-right: 20px;
+}
+
+/* Small screens */
+
+@media (max-width: 1000px) {
+  [class*='col-'] {
     width: 100%;
-    font-size: 2em;
-    line-height: 1.8em;
-    text-indent: 10px;
-    border: 0;
-    border-radius: 0;
-    padding: 10px 0;
-    margin: 0;
+    padding: 0 0 10px 0;
+    /* gutter */
   }
-  #search:focus {
-    width: 100%;
-    border: 0;
-    opacity: 1;
+
+  [class*='col-'][class*='col-']:last-of-type {
+    padding: 0 0 0 0;
   }
-  .directory h1 {
-    font-size: 2em;
-    line-height: 1.5em;
-    color: #fff;
-    background: #000;
-    padding: 15px 10px;
-    margin: 0;
-  }
-  ul#files {
-    border-top: 1px solid #cacaca;
-  }
-  ul#files li {
-    float: none;
-    width: auto !important;
-    display: block;
-    border-bottom: 1px solid #cacaca;
-    font-size: 2em;
-    line-height: 1.2em;
-    text-indent: 0;
-    margin: 0;
-  }
-  ul#files li:nth-child(odd) {
-    background: #e0e0e0;
-  }
-  ul#files li a {
+
+  .row {
+    padding: 0 0 0 0;
     height: auto;
-    border: 0;
-    border-radius: 0;
-    padding: 15px 10px;
   }
-  ul#files li a:focus,
-  ul#files li a:hover {
-    border: 0;
+
+  .row-pad {
+    padding: 20px 20px 20px 20px;
   }
-  #files .header,
-  #files .size,
-  #files .date {
-    display: none !important;
-  }
-  #files .name {
-    float: none;
-    display: inline-block;
+
+  [class*='w-'] {
     width: 100%;
-    text-indent: 0;
-    background-position: 0 50%;
-  }
-  #files .icon .name {
-    text-indent: 41px;
   }
 }
+
+
